--- a/gif-index.html
+++ b/gif-index.html
@@ -16,7 +16,7 @@
 
 <body>
     <h1>ANIME CHARACTERS</h1>
-    <div id="animeButtons"></div>
+    <div id="animeButtons">
         <button data-person="Rasengan!">Rasengan!</button>
         <button data-person="Sasuke">Chidori!</button>
         <button data-person="kakashi">Copy Cat Ninja!</button>
@@ -32,7 +32,7 @@
     <!-- Where the gifs will show -->
     <div id="gifs" style="float:left"></div>
     <!-- Write in section -->
-    <div style="float:right; margin-top:90px;">
+    <div style="margin-left:640px; margin-top:0px;">
         <h4>Add an Anime!</h4>
         <form id="gif-form">
             <label for="gif-input"></label>
