--- a/gif-index.html
+++ b/gif-index.html
@@ -38,7 +38,7 @@
             <label for="gif-input"></label>
             <input type="text" value="" id="gif-input"><br><br>
             <!--Creates the submit button-->
-            <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px">
+            <input type="submit" name="Button" id="theButton" style="margin-left:8px">
         </form>
     </div>
 
