--- a/gif-index.html
+++ b/gif-index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>ANIME CHARACTERS</h1>
+    <h1>ANIME CHARACTERS!</h1>
     <div id="animeButtons">
         <button data-person="Rasengan!">Rasengan!</button>
         <button data-person="Sasuke">Chidori!</button>
