--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="assets/javascript/gif-app.js"></script>
+    <script src="assets/javascript/app.js"></script>
 
     <title>Gif Tastic</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/gif-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
